Secao7-Security/168-pod-edicao.yaml
apiVersion: v1
kind: Pod
metadata:
  generateName: web-dashboard-97c9c59f6-
  labels:
    name: web-dashboard
    pod-template-hash: 97c9c59f6
  name: web-dashboard-97c9c59f6-pm9dv
  namespace: default
spec:
  containers:
  - env:
    - name: PYTHONUNBUFFERED
      value: "1"
    image: gcr.io/kodekloud/customimage/my-kubernetes-dashboard
    imagePullPolicy: Always
    name: web-dashboard
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-zz78s
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: controlplane
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: dashboard-sa
  serviceAccountName: dashboard-sa
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-zz78s
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
