Secao7-Security/179-netpol-editada.yaml.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: payroll
      ports:
        - protocol: TCP
          port: 8080
    - podSelector:
        matchLabels:
          name: mysql
      ports:
        - protocol: TCP
          port: 3306
